--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,20 @@ body, html {
 }
 
 body {
-    border: 10px solid #1f1c1c;
-    /* overflow: auto; */
-    /* position: static; */
-    /* display: block; */
-    /* margin: 8px; */
+    border: 11px solid #1f1c1c;
+    height: 1000px;
+    overflow: auto;
+    position: static;
+    display: block;
+    margin: 8px;
 }
 
 .container {
-
   display: block;
-  margin: 0px;
+  margin:20px 0 0 0;
   background-color: white;
-  width: 100%;
+  max-width: 100%;
+  height: 100%;
   padding: 0;
 }
 
@@ -54,7 +55,16 @@ body {
   width:100%;
 }
 #home{
+  display: flex;
   background-image: url('../resources/alexandru-acea.jpg');
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
+}
+#home h1,h3{
+  color: #00808080;
 }
