--- a/css/style.css
+++ b/css/style.css
@@ -72,8 +72,10 @@ nav{
   width:100%;
 }
 #picture {
-  /* position: absolute; */
+  position: relative;
   display: block;
+  top: 80px;
+  left: 600px;
   width: 200px;
   height: 200px;
   margin-bottom: 20px;
@@ -190,6 +192,26 @@ from, to { border-color: transparent }
 }
 hr{
   position: absolute;
-  background: red;
+  background: #404041;
   width: 40%;
+  top: 850px;
+}
+#aboutMe{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+#skills{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container-1{
+  justify-content: center;
+  display: flex;
+  margin: 100px;
+  padding: 100px;
+  width: 100%;
+  height: 100%;
 }
