--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body, html {
 
 body {
     border: 10px solid #333;
-    height: 1500px;
+    /* height: 2000px; */
     overflow: auto;
     position: static;
     display: block;
@@ -18,7 +18,7 @@ body {
     background-color: white /*#6b00ff*/;
 }
 
-.container {
+.container-1 {
   display: block;
   margin:20px 0 0 0;
   background-color: white;
@@ -29,7 +29,6 @@ body {
 nav{
   padding:0px!important;
 }
-
 .navbar{
   position: fixed;
   top: 0px;
@@ -42,9 +41,6 @@ nav{
 .grey{
   background-color:grey;
 }
-
-
-
 .nav-link {
   /* position:relative; */
   padding: 12px 60px 12px 60px !important;
@@ -77,7 +73,7 @@ nav{
   top: 80px;
   left: 600px;
   width: 200px;
-  height: 200px;
+  height: 100px;
   margin-bottom: 20px;
   border: 3px solid #404041;
   border-radius: 15%;
@@ -91,7 +87,7 @@ nav{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 45%;
+  height: 600px;
 }
 #head {
     font-family: monospace;
@@ -190,28 +186,86 @@ from, to { border-color: transparent }
   from { width: 0 }
   to { width: 100% }
 }
-hr{
-  position: absolute;
-  background: #404041;
-  width: 40%;
-  top: 850px;
-}
 #aboutMe{
   display: flex;
   flex-direction: column;
   text-align: center;
+  display: block;
+  padding: 50px;
+  box-shadow:  2px 3px 6px 2px black;
 }
-
-#skills{
+#aboutMe header{
+  margin-bottom: 30px;
+}
+#skills {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
-.container-1{
+  text-align: center;
   justify-content: center;
+  padding-top: 50px;
+  border-bottom: 2px solid black;
+}
+#skills header h1{
+  margin: 40px 0 100px 0;
+}
+hr{
+  background-color: transparent;
+}
+.col h5{
   display: flex;
-  margin: 100px;
-  padding: 100px;
+  flex-direction: column;
+}
+.col{
+  margin-bottom: 20px;
+}
+.col h5 i{
+  margin-bottom: 8px;
+}
+.row{
+  display: flex;
   width: 100%;
-  height: 100%;
+  justify-content: center;
+}
+#projects header{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 0 70px 0;
+}
+.grid-wrapper {
+  display: grid;
+  grid-gap: 2em;
+  grid-template: repeat(2,1fr)/repeat(3,1fr);
+}
+.wrapper{
+  padding: 0;
+  margin: 150px;
+}
+div.pr {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  cursor: pointer;
+  height: 250px;
+  position: relative;
+  box-sizing: border-box;
+  padding: 10px;
+  box-shadow: 0 1px 6px rgba(0,0,0,.4);
+}
+div.pr:hover{
+  box-shadow: 5px 14px 28px rgba(0,0,0,.30);
+  transition: ease .5s;
+
+}
+div.project1{
+ background-image: url('../resources/img/Screen Shot 2019-05-09 at 12.49.10 PM.png');
+}
+div.project2{
+ background-image: url('../resources/img/Screen Shot 2019-05-11 at 2.32.28 PM.png');
+}
+button.viewMore{
+
 }
