--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body, html {
 }
 
 body {
-    border: 10px solid #333;
+    border: 10px solid #1f1c1c;
     /* height: 2000px; */
     overflow: auto;
     position: static;
@@ -67,17 +67,6 @@ nav{
 .nav-link:hover:before{
   width:100%;
 }
-#picture {
-  position: relative;
-  display: block;
-  top: 80px;
-  left: 600px;
-  width: 200px;
-  height: 100px;
-  margin-bottom: 20px;
-  border: 3px solid #404041;
-  border-radius: 15%;
-}
 #home{
   display: flex;
   background-image: url('../resources/img/julian-o-hayon-257567-unsplash.jpg');
@@ -87,7 +76,7 @@ nav{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 600px;
+  height: 650px;
 }
 #head {
     font-family: monospace;
@@ -230,7 +219,7 @@ hr{
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 0 70px 0;
+  margin: 0 0 30px 0;
 }
 .grid-wrapper {
   display: grid;
@@ -238,8 +227,9 @@ hr{
   grid-template: repeat(2,1fr)/repeat(3,1fr);
 }
 .wrapper{
+  text-align: center;
   padding: 0;
-  margin: 150px;
+  margin: 100px 150px 150px 150px;
 }
 div.pr {
   display: flex;
@@ -254,11 +244,10 @@ div.pr {
   box-sizing: border-box;
   padding: 10px;
   box-shadow: 0 1px 6px rgba(0,0,0,.4);
+  transition: ease .5s;
 }
 div.pr:hover{
   box-shadow: 5px 14px 28px rgba(0,0,0,.30);
-  transition: ease .5s;
-
 }
 div.project1{
  background-image: url('../resources/img/Screen Shot 2019-05-09 at 12.49.10 PM.png');
@@ -266,6 +255,98 @@ div.project1{
 div.project2{
  background-image: url('../resources/img/Screen Shot 2019-05-11 at 2.32.28 PM.png');
 }
+div.popup{
+  display: none;
+  color: white;
+  /* display: flex; */
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.55);
+  box-shadow: inset 0 0 0 2px #fff, 0 1px 6px rgba(0,0,0,.4);
+}
+.popup h2 {
+  padding-bottom: 20px;
+}
 button.viewMore{
-
+  background-color: transparent;
+  border-radius: 5px;
+  height: 40px;
+  width: 140px;
+  border: 2px solid #fff;
+  color: #fff;
+  transition: ease-in-out .3s;
+}
+button.viewMore:focus{
+  outline: none;
+}
+button.viewMore:hover{
+  width: 170px;
+  color: #308dff;
+}
+#contact{
+  text-align: center;
+  background-color: #1f1c1c;
+  height: 500px;
+  color: #fff;
+  padding: 70px 300px 0 300px;
+}
+#contact a{
+  text-decoration:none;
+  outline: none;
+}
+.info{
+  padding-bottom: 10px;
+  border-bottom: .5px solid #999;
+  border-radius: 4px;
+}
+.formContact{
+  padding: 20px 100px 0 100px;
+}
+.forms{
+  display: inline-block;
+  border-radius: 6px;
+  margin: 4px;
+  background-color: #191616;
+  color: #999;
+  padding: 3px 9px;
+  border-bottom: 2px solid hsla(0,0%,100%,.03);
+  border-left: 2px solid hsla(0,0%,100%,.03);
+  border-right: 2px solid hsla(0,0%,100%,.03);
+  border-top: 2px solid rgba(0,0,0,.24);
+}
+textarea.forms{
+  width: 600px;
+  height:100px;
+}
+.forms:focus {
+  outline: none;
+}
+#submit-btn{
+  padding-top: 2px;
+  width: 120px;
+}
+#submit-btn:hover{
+  background-color: grey;
+  border: none;
+  color: #fff;
+  border: 2px solid transparent;
+}
+button.resume {
+  margin-right: 310px;
+}
+button.resume:hover{
+  border: 2px solid transparent;
+  background-color: grey;
+  color: #fff;
+}
+footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  color: #999;
+  background-color: #1f1c1c;
 }
